--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,5 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&family=Rubik+Glitch&display=swap');
 *{
   padding: 0;
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  color: orange;
+}
+body{
+  background: rgb(243, 240, 234);
+}
+a{
+  text-decoration: none;
+}
+nav{
+  background: rgb(250, 245, 237);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 80px;
+  box-shadow:0 2px 4px 0 rgba(0,0,0,.2);
+}
+nav .brand-name a{
+  position: fixed;
+  left: 20px;
+  top: 20px;
+  font-size: 30px;
+  font-weight:900;
+  text-decoration: none;
+  border: none;
+}
+nav .nav-item{
+  display: flex;
+  position: fixed;
+  right: 20px;
+  top: 30px;
+  list-style: none;
+  font-size: large;
+  font-weight:500;
+}
+.nav-item a{
+  text-decoration: none;
+  margin-right: 20px;
+}
+a:hover{
+  border-bottom: solid 2px orange;
+}
+nav .menu-btn{
+  display: none;
+  border: none;
+  font-size: large;
+  font-weight:500;
+  cursor: pointer;
+  background: none;
+}
+.menu-list{
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 30%;
+  bottom: 0;
+  background: rgb(224, 217, 204);
+  padding: min(10vh,2rem) 2em;
+  z-index: 1000;
+  transition: ease-out 2s;
+}
+.menu-list ul{
+  list-style: none;
+  font-size: large;
+  font-weight:500;
+  line-height: 40px;
+  margin-top: 50px;
+}
+.menu-list button{
+  cursor: pointer;
+  font-size: large;
+  font-weight:700;
+  border: none;
+  background: none;
+  position: fixed;
+  right: 50px;
+}
+button:hover{
+  color: black;
+}
+.start{
+  padding: 100px 20px 0 20px;
+}
+.home .grid-podcast{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  column-gap: 50px;
+  row-gap: 50px;
+}
+.card{
+  border: solid 1px grey;
+  border-radius: 5px;
+  cursor: pointer;
+  border-left: solid 30px steelblue;
+}
+.card:hover{
+
 }
