--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -3,15 +3,16 @@
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
-  color: orange;
 }
 body{
   background: rgb(243, 240, 234);
+  color: orange;
 }
 a{
   text-decoration: none;
+  color: orange;
 }
-nav{
+.nav-bar{
   background: rgb(250, 245, 237);
   position: fixed;
   left: 0;
@@ -20,7 +21,7 @@ nav{
   height: 80px;
   box-shadow:0 2px 4px 0 rgba(0,0,0,.2);
 }
-nav .brand-name a{
+.nav-bar .brand-name a{
   position: fixed;
   left: 20px;
   top: 20px;
@@ -29,7 +30,7 @@ nav .brand-name a{
   text-decoration: none;
   border: none;
 }
-nav .nav-item{
+.nav-bar .nav-item{
   display: flex;
   position: fixed;
   right: 20px;
@@ -45,14 +46,15 @@ nav .nav-item{
 a:hover{
   border-bottom: solid 2px orange;
 }
-nav .sign-out-btn{
+.nav-bar .sign-out-btn{
   border: none;
   font-size: large;
   font-weight:500;
   cursor: pointer;
   background: none;
 }
-nav .menu-btn{
+.nav-bar .menu-btn{
+  color: orange;
   display: none;
   border: none;
   font-size: large;
@@ -89,6 +91,7 @@ nav .menu-btn{
   margin-top: 50px;
 }
 .menu-list button{
+  color: orange;
   cursor: pointer;
   font-size: large;
   font-weight:700;
@@ -103,6 +106,66 @@ button:hover{
 .start{
   padding: 100px 20px 0 20px;
 }
+
+/* landing page  css */
+.hero-image{
+  height: fit-content;
+  /* background: rgb(43, 183, 226); */
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),url('../assests/anime.png') no-repeat top;
+  background-size: cover;
+}
+.nav{
+  display: flex;
+}
+.nav .nav-item{
+  color: aliceblue;
+  padding: 10px 50px;
+  flex: 1 1;
+}
+.nav ul {
+  display: flex;
+  justify-content: flex-end;
+}
+.nav ul li{
+  flex: 1 1;
+}
+.nav a{
+  color: aliceblue;
+  text-decoration: none;
+}
+.hero-image .content{
+  color: aliceblue;
+  text-align: center;
+  padding: 80px 0;
+  line-height: 50px;
+}
+.content h1{
+  font-weight: 700;
+  font-size: 50px;
+}
+.content h1 span{
+  color: orange;
+}
+.content p{
+  font-size: large;
+}
+.content button{
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  margin: 40px 0;
+  background: orange;
+  border: none;
+  color: white;
+  font-size: large;
+  font-weight: 700;
+  border-radius: 40px;
+}
+.content button:hover{
+  color: orange;
+  background: white;
+}
+
 .home .grid-podcast{
   display: grid;
   grid-template-columns: repeat(4,1fr);
