--- a/client/src/css/responsive.css
+++ b/client/src/css/responsive.css
@@ -15,4 +15,9 @@
       background:  rgb(224, 217, 204);
       backdrop-filter: blur(3rem);
     }
+    .talk-to-us form{
+      /* background: rgba(105, 103, 103, 0.1); */
+      background: orange;
+      backdrop-filter: blur(10rem);
+    }
   }
