--- a/client/src/css/responsive.css
+++ b/client/src/css/responsive.css
@@ -148,6 +148,17 @@
   footer .quick-links{
     margin-left: -80px;
   }
+
+  /* sigin pages forms */
+  .nav-bar .brand-name a{
+    font-size: 20px;
+  }
+  .sign-in form input{
+    width: 80vw;
+  }
+  .sign-in form .link-btn a{
+    font-size: 12px;
+  }
 }
 
 @supports(backdrop-filter: blur(2rem)){
