--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -138,7 +138,7 @@ a:hover{
   color: orange;
   display: none;
   border: none;
-  font-size: large;
+  font-size: 30px;
   font-weight:500;
   cursor: pointer;
   background: none;
@@ -166,15 +166,15 @@ a:hover{
 }
 .menu-list ul{
   list-style: none;
-  font-size: large;
-  font-weight:500;
-  line-height: 40px;
+  font-size: 30px;
+  font-weight:600;
+  line-height: 70px;
   margin-top: 50px;
 }
 .menu-list button{
   color: orange;
   cursor: pointer;
-  font-size: large;
+  font-size: 35px;
   font-weight:700;
   border: none;
   background: none;
@@ -195,7 +195,7 @@ button:hover{
 }
 .hero-image{
   height: fit-content;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),url('../assests/anime.png') no-repeat top;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),url('../assests/msg-gif.gif') no-repeat top;
   background-size: cover;
   width: 100%;
 }
@@ -499,7 +499,7 @@ footer ul li a:hover{
 /* guide-page CSS */
 .guide-page .hero-image{
   height: fit-content;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),url('../assests/comp.png') no-repeat top;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../assests/msg3.jpg') no-repeat top;
   background-size: cover;
   width: 100%;
 }
@@ -769,4 +769,44 @@ footer ul li a:hover{
   justify-content: center;
   height: 100vh;
   align-items: center;
+}
+/* suppport css */
+.support{
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+.support .card{
+  line-height: 25px;
+  font-size: medium;
+  padding: 50px 50px;
+  background: #f2f2f2;
+  box-shadow:0 2px 4px 0 rgb(0,0,0);
+  width: fit-content;
+  height: fit-content;
+  border-radius: 20px;
+}
+.support .card .close{
+  float: right;
+  cursor: pointer;
+  width: 50px;
+  height: 20px;
+  margin-top: -30px;
+  margin-right: -30px;
+}
+.support .card input{
+  width: 250px;
+  height: 30px;
+  padding: 0 20px;
+  margin: 10px 0;
+}
+.support .card .btn{
+  background: rgb(9, 78, 78);
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
