--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -810,3 +810,9 @@ footer ul li a:hover{
   border: none;
   cursor: pointer;
 }
+.support .card img{
+  margin-bottom:20px;
+  margin-top:-15px; 
+  width:50px;
+  height: 30px;
+}
