--- a/client/src/css/responsive.css
+++ b/client/src/css/responsive.css
@@ -201,6 +201,10 @@
     height: 30px;
     margin: 5px 0;
   }
+  .support .card img{
+    width:40px;
+    height: 40px;
+  }
 }
 
 @media screen and (max-width:500px){
