fixed the menu-list button

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -161,7 +161,7 @@ a:hover{
   left: 30%;
   bottom: 0;
   background: rgb(224, 217, 204);
-  padding: min(10vh,2rem) 2em;
+  padding: min(10vh,2rem) 0 0 2em;
   transition: ease-out 2s;
 }
 .menu-list ul{
@@ -273,7 +273,7 @@ button:hover{
   left: 30%;
   bottom: 0;
   background: rgb(224, 217, 204);
-  padding: min(10vh,2rem) 2em;
+  padding: min(10vh,2rem) 0 0 2em;
   transition: ease-out 2s;
 }
 .menu-bg .menu-list ul{
@@ -297,12 +297,12 @@ button:hover{
 .menu-bg .menu-list button{
   color: orange;
   cursor: pointer;
-  font-size: 6vw;
+  font-size: 8vw;
   font-weight:700;
   border: none;
   background: none;
   position: fixed;
-  right: 50px;
+  right: 10px;
 }
 .hero-image .content{
   color: aliceblue;
@@ -814,5 +814,5 @@ footer ul li a:hover{
   margin-bottom:20px;
   margin-top:-15px; 
   width:50px;
-  height: 30px;
+  height: 50px;
 }
